elisheva alone auth

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,4 +5,6 @@
 </router-outlet> -->
 <main>
 <app-gift-gallery></app-gift-gallery>
+<app-login></app-login>
+<app-register></app-register>
 </main>
