--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,5 @@
+<app-header></app-header> 
 
-<h1>Chinese Auction</h1>
-<!-- <router-outlet>
-   
-</router-outlet> -->
-<main>
-<app-gift-gallery></app-gift-gallery>
-<app-login></app-login>
-<app-register></app-register>
-</main>
+<div class="content">
+    <router-outlet></router-outlet> 
+</div>
