fix: resolve routerLink navigation in HomeComponent

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -14,10 +14,10 @@
             <h1 class="animate-pop-in">המכירה הסינית הגדולה</h1>
             <p class="subtitle animate-fade-up">הזדמנות נדירה לזכות בפרסים יוקרתיים ולתמוך במטרה חשובה</p>
 
-            <button class="cta-button" routerLink="/gallery">
+            <a class="cta-button" routerLink="/catalog" style="text-decoration: none; display: inline-block;">
                 <span class="icon">🎁</span>
                 למעבר לקטלוג הפרסים
-            </button>
+            </a>
         </div>
 
         <div class="glowing-orb orb-1"></div>
