add donor-manegment and sort ,katalog search

--- a/src/app/components/layout/header/header.html
+++ b/src/app/components/layout/header/header.html
@@ -27,7 +27,7 @@
             <a routerLink="/login" class="login-link">LOGIN</a>
             <a routerLink="/register" class="login-link">REGISTER</a>
         } @else {
-            <a (click)="logout()" class="login-link" style="cursor: pointer;">LOGOUT</a>
+            <a (click)="logout()" class="login-link" style="cursor: pointer;"><i class="pi pi-sign-out"></i></a>
         }
     </div>
 </header>
