--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 /* ייבוא פונט טכנולוגי (Orbitron ללוגו, Heebo לטקסט רגיל) */
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Heebo:wght@300;400;700&display=swap');
+@import "primeicons/primeicons.css";
 
 
 :root {
