--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,9 @@
-<app-header></app-header> 
+
+<app-header></app-header>
+
+<app-cart></app-cart>
 
 <div class="content">
-    <router-outlet></router-outlet> 
+
+    <router-outlet></router-outlet>
 </div>
