--- a/src/app/components/purchaser/gift-gallery/gift-gallery.html
+++ b/src/app/components/purchaser/gift-gallery/gift-gallery.html
@@ -16,7 +16,7 @@
             <th>תורם</th>
             <th>מחיקה</th>
             <th>עריכה</th>
-
+            <th>הגרלה</th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-gift>
@@ -33,6 +33,9 @@
             <td>
                 <p-button icon="pi pi-trash" [text]="true" severity="danger" (click)="delete(gift.id)"></p-button>
             </td>
+            <td>
+                <p-button icon="pi pi-gift" [text]="true" severity="danger" (click)="lottery(gift.id)"></p-button>
+            </td>
 
         </tr>
     </ng-template>
@@ -41,11 +44,9 @@
 
 
 @if(displayDialog) {
-<p-dialog [header]="selectedGift ? 'עריכת מתנה' : 'הוספת מתנה חדשה'" [(visible)]="displayDialog" [style]="{width: '50vw'}">
-    <app-gift-form 
-        [giftToEdit]="selectedGift" 
-        [categories]="categories"
-        (save)="onSaveGift($event)"
+<p-dialog [header]="selectedGift ? 'עריכת מתנה' : 'הוספת מתנה חדשה'" [(visible)]="displayDialog"
+    [style]="{width: '50vw'}">
+    <app-gift-form [giftToEdit]="selectedGift" [categories]="categories" (save)="onSaveGift($event)"
         (cancel)="closeDialog()">
     </app-gift-form>
 </p-dialog>
