--- a/src/app/components/auth/login/login.html
+++ b/src/app/components/auth/login/login.html
@@ -57,9 +57,9 @@
           <!-- קישור להרשמה -->
           <div class="signup-link">
             <p>עדיין אין חשבון? 
-              <a href="/register" class="link">הירשם כאן</a>
+                <a (click)="switchToRegister.emit()" style="cursor: pointer;" class="link">הירשם כאן</a>
             </p>
-          </div>
+        </div>
         </form>
       </div>
     </p-card>
