--- a/src/app/components/gift-form/gift-form.html
+++ b/src/app/components/gift-form/gift-form.html
@@ -6,19 +6,21 @@
                 <label for="name">שם המתנה <span class="required">*</span></label>
                 <input pInputText id="name" formControlName="name" placeholder="הכנס שם..." />
                 @if (form.get('name')?.touched && form.get('name')?.invalid) {
-                    <small class="error-msg">שם חובה (עד 200 תווים)</small>
+                <small class="error-msg">שם חובה (עד 200 תווים)</small>
                 }
             </div>
 
             <div class="form-row">
                 <div class="form-field half-width">
                     <label for="ticketPrice">מחיר כרטיס</label>
-                    <p-inputNumber id="ticketPrice" formControlName="ticketPrice" mode="currency" currency="ILS" [min]="0.1"></p-inputNumber>
+                    <p-inputNumber id="ticketPrice" formControlName="ticketPrice" mode="currency" currency="ILS"
+                        [min]="0.1"></p-inputNumber>
                 </div>
 
                 <div class="form-field half-width">
                     <label for="category">קטגוריה</label>
-                    <p-select [options]="categories" [(ngModel)]="form.value.categoryId" formControlName="categoryId" optionLabel="name" optionValue="id" placeholder="בחר קטגוריה" appendTo="body"></p-select>
+                    <p-select [options]="categories" formControlName="categoryId"
+                        optionLabel="name" optionValue="id" placeholder="בחר קטגוריה" appendTo="body"></p-select>
                 </div>
             </div>
 
@@ -28,14 +30,17 @@
             </div>
 
             <div class="form-field">
-                <label for="imageUrl">קישור לתמונה (URL)</label>
-                <input pInputText id="imageUrl" formControlName="imageUrl" class="ltr-input" />
+                <label>תמונת המתנה</label>
+                <p-fileUpload mode="basic" (onSelect)="onFileSelect($event)" chooseLabel="בחר תמונה" accept="image/*"
+                    maxFileSize="1000000">
+                </p-fileUpload>
             </div>
         </div>
 
         <div class="form-actions">
-            <p-button label="ביטול" icon="pi pi-times" styleClass="p-button-text p-button-secondary" (click)="cancel.emit()"></p-button>
-            <p-button label="שמור מתנה" icon="pi pi-check" type="submit" ></p-button>
+            <p-button label="ביטול" icon="pi pi-times" styleClass="p-button-text p-button-secondary"
+                (click)="cancel.emit()"></p-button>
+            <p-button label="שמור מתנה" icon="pi pi-check" type="submit"></p-button>
         </div>
     </form>
 </div>
