--- a/src/app/components/manager/management-donor/management-donor.html
+++ b/src/app/components/manager/management-donor/management-donor.html
@@ -20,30 +20,30 @@
             <td>{{donor.name}}</td>
             <td>{{donor.email}}</td>
             <td>{{donor.phone}}</td>
-             <td class="flex gap-2">
-                <p-button icon="pi pi-pencil" [text]="true" (click)="onEdit(donor)">הוסף מתנה</p-button>
+            <td class="flex gap-2">
+                <p-button icon="pi pi-plus" [text]="true" (click)="openGiftDialog(donor)">הוסף מתנה</p-button>
             </td>
             <td class="flex gap-2">
                 <p-button icon="pi pi-pencil" [text]="true" (click)="onEdit(donor)">עדכון</p-button>
             </td>
             <td>
-                  <p-button icon="pi pi-trash" [text]="true" severity="danger" (click)="delete(donor.id)">מחק</p-button>
+                <p-button icon="pi pi-trash" [text]="true" severity="danger" (click)="delete(donor.id)">מחק</p-button>
             </td>
         </tr>
     </ng-template>
 </p-table>
 
 @if(displayDialog) {
-<p-dialog [header]="selectedDonor ? 'עריכת תורם' : 'הוספת תורם'" 
-          [(visible)]="displayDialog" 
-          [modal]="true" 
-          [style]="{ width: '400px' }">
-    
-    <app-donor-form 
-        [donorToEdit]="selectedDonor"
-        (save)="saveDonor($event)"
-        (cancel)="displayDialog = false">
+<p-dialog [header]="selectedDonor ? 'עריכת תורם' : 'הוספת תורם'" [(visible)]="displayDialog" [modal]="true"
+    [style]="{ width: '400px' }">
+    <app-donor-form [donorToEdit]="selectedDonor" (save)="saveDonor($event)" (cancel)="displayDialog = false">
     </app-donor-form>
+</p-dialog>
+}
 
+@if(displayGiftDialog) {
+<p-dialog header="הוספת מתנה לתורם" [(visible)]="displayGiftDialog" [modal]="true">
+    <app-gift-form [categories]="categories" (save)="addGiftToDonor($event)" (cancel)="displayGiftDialog = false">
+    </app-gift-form>
 </p-dialog>
 }
