--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,8 +2,7 @@
 <app-header></app-header>
 
 <app-cart></app-cart>
-
+<app-chat-widget></app-chat-widget>
 <div class="content">
-
     <router-outlet></router-outlet>
 </div>
