--- a/src/app/components/layout/header/header.html
+++ b/src/app/components/layout/header/header.html
@@ -49,26 +49,18 @@
     </nav>
 
     <div class="actions">
-    @if (!isLoggedIn()) {
-    <a (click)="openLogin()" class="login-link" style="cursor: pointer;">LOGIN</a>
-    <a (click)="openRegister()" class="login-link" style="cursor: pointer;">REGISTER</a>
-    } @else {
-    <a (click)="logout()" class="login-link" style="cursor: pointer;"><i class="pi pi-sign-out"></i></a>
-    }
-    
-    </div>
-<p-drawer 
-    [visible]="isAuthVisible()" 
-    (visibleChange)="isAuthVisible.set($event)" 
-    position="right" 
-    [style]="{width: '400px', background: '#0f172a', color: 'white'}">
-    
-    <div class="auth-container" style="padding: 20px;">
-        @if (authMode() === 'login') {
-            <app-login (onSuccess)="isAuthVisible.set(false)" (switchToRegister)="authMode.set('register')"></app-login>
+        @if (!isLoggedIn()) {
+        <a routerLink="/login" class="login-link">LOGIN</a>
+        <a routerLink="/register" class="login-link">REGISTER</a>
         } @else {
-            <app-register (onSuccess)="isAuthVisible.set(false)" (switchToLogin)="authMode.set('login')"></app-register>
+        <a (click)="logout()" class="login-link" style="cursor: pointer;"><i class="pi pi-sign-out"></i></a>
         }
+        
+        <div class="cart-wrapper" (click)="cartService.isCartVisible.set(true)">
+            <i class="pi pi-shopping-cart cart-icon"></i>
+            @if(cartService.totalItemsCount() > 0) {
+                <span class="cart-badge">{{ cartService.totalItemsCount() }}</span>
+            }
+        </div>
     </div>
-</p-drawer>
 </header>
